<resources>
    <string name="app_name">DrawerLayoutStatusBar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Alex Lockwood</string>
    <string name="nav_header_subtitle">alexjlockwood@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyCYrQJKQkzzvuOuIr3FnbEsrslN4yQpcIk
    </string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eget interdum ante, at adipiscing ipsum. Phasellus pellentesque commodo libero, id volutpat ipsum pretium at. Duis sit amet egestas nisi. Donec id dui eu lectus volutpat posuere. Nunc et viverra ante, vel malesuada tortor. Pellentesque ut interdum tellus, sit amet hendrerit dui. Sed accumsan, nisl eu tincidunt tempus, neque lorem sodales odio, non tristique orci lorem quis augue. In sodales rutrum faucibus. Morbi egestas massa sit amet ante pellentesque, eu laoreet ante congue. Sed aliquet, dolor ac placerat pellentesque, risus leo fermentum quam, eget eleifend tellus nulla euismod tellus. Donec adipiscing cursus leo et faucibus. Aliquam erat volutpat.</string>

    <string name="home">Home</string>
    <string name="promos">Promos</string>
    <string name="donate">Donate</string>
    <string name="collapsing_toolbar">Collapsing toolbar</string>
    <string name="toolbar">Toolbar</string>

</resources>
